# Asistente-de-documentacion-interna

Corporate-Document-Intelligence/: README.md  pyproject.toml
Corporate-Document-Intelligence/src/corporate_document_intelligence_system/: crew.py  main.py
Corporate-Document-Intelligence/src/corporate_document_intelligence_system/config/: agents.yaml  tasks.yaml
