[project]
name = "corporate_document_intelligence_system"
version = "0.1.0"
description = "corporate_document_intelligence_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
corporate_document_intelligence_system = "corporate_document_intelligence_system.main:run"
run_crew = "corporate_document_intelligence_system.main:run"
train = "corporate_document_intelligence_system.main:train"
replay = "corporate_document_intelligence_system.main:replay"
test = "corporate_document_intelligence_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
